@@ -2,3 +2,6 @@
 
 javac -d bin Main.java
 java -cp bin Main
+
+tomorrow task is to finish-> if partial search give empty then search full disk ;
+java --module-path "C:\javafx-sdk-21\lib" --add-modules javafx.controls,javafx.fxml -cp bin Main
